2007-12-27  Jakub Jelinek  <jakub@redhat.com>

	PR target/34281
	* config/arm/arm.c (arm_setup_incoming_varargs): If last named
	argument needs double word alignment and cum->nregs is odd, account
	for the inserted padding.

	PR debug/34535
	* tree-mudflap.c (mf_make_builtin): Make decl artificial
	and don't emit debug info for it.

2007-12-26  Anatoly Sokolov <aesok@post.ru>

	* config/avr/avr.h (LINK_SPEC, CRT_BINUTILS_SPECS): Move AT90USB82 
	and AT90USB162 devices from 'avr5' to 'avr35' architecture.
	(ASM_SPEC): Add 'avr35' architecture.
	* config/avr/avr.c (avr_mcu_types): Move AT90USB82 and AT90USB162 
	devices from 'avr5' to 'avr35' architecture.
	(avr_arch_types): Add "avr23" entries.
	(avr_arch): Add 'ARCH_AVR35'.
	* config/avr/t-avr (MULTILIB_OPTIONS, MULTILIB_DIRNAMES): Add 'avr35'.
	(MULTILIB_MATCHES): Move AT90USB82 and AT90USB162 devices from 'avr5'
	to 'avr35' architecture.

2007-12-22  David Daney  <ddaney@avtrex.com>

	* doc/install.texi (disable-libgcj-bc): Document new option.

2007-12-21  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* pa.c (hppa_legitimize_address): Use INT14_OK_STRICT in mask selection.

	PR target/34525
	* pa.c (legitimize_pic_address): Emit insn to load function label
	forced to memory.

2007-12-21  Andrew Pinski  <pinskia@gmail.com>
	Rask Ingemann Lambertsen  <rask@sygehus.dk>

	PR target/8835
	* config/mcore/mcore.c (mcore_function_value): Call promote_mode
	instead of PROMOTE_MODE.

2007-12-21  Sebastian Pop  <sebastian.pop@amd.com>

	* lambda-code.c (lambda_loopnest_to_gcc_loopnest): Fix typo.

2007-12-21  Sebastian Pop  <sebastian.pop@amd.com>

	* tree-data-ref.c (signed_type_for_types): New.
	(affine_fn_op): Use signed_type_for_types and signed_type_for instead
	of long_integer_type_node.
	(analyze_ziv_subscript): Same.
	(analyze_siv_subscript_cst_affine): Same.
	(analyze_miv_subscript): Same.
	(omega_setup_subscript): Same.

2007-12-21  Richard Sandiford  <rsandifo@nildram.co.uk>
