@@ -1,3 +1,8 @@
+2007-12-27  Dorit Nuzman  <dorit@il.ibm.com>
+
+	PR tree-optimization/34591
+	* gcc.dg/vect/pr34591.c: New test.
+
 2007-12-27  Thomas Koenig  <tkoenig@gcc.gnu.org>
 
 	PR libfortran/34594
